--- a/index.xhtml
+++ b/index.xhtml
@@ -5,36 +5,99 @@
 <meta name="description" content="The league of open-source technology beaux esprits. The ΩF:∅ Working Group develops free and open-source technology."/>
 <title>ΩF:∅ Working Group</title>
 <meta name="viewport" content="width=device-width"/>
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 <link rel="stylesheet" type="text/css" href="css/global.css"/>
 <link rel="stylesheet" type="text/css" href="avatars.css"/>
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+ga('create', 'UA-20491376-1');
+ga('send', 'pageview');
+</script>
+
 </head>
 <body>
 <header>
-	<h1 class="logo oftn-strong">ΩF:∅ <span class="oftn">Working Group</span></h1>
+	<h1 class="logo oftn">ΩF:∅ Working Group</h1>
 	<p class="tagline">The league of open-source technology beaux esprits.</p>
+	<div id="links">
+		<ul>
+			<li><a href="http://blog.wg.oftn.org"><span class="oftn">ΩF:∅</span> Working Group Blog</a></li>
+			<li><a href="https://twitter.com/oftn_wg">Twitter (@oftn_wg)</a></li>
+			<li><a href="https://github.com/oftn">Source Code</a></li>
+		</ul>
+	</div>
 </header>
 <div id="container">
 	<div id="contents">
-		<div id="overview" class="accordian">
-			<h2 id="about" title="What are we?">About</h2>
-			<div class="accordian-panel">
+		<div class="panel" id="about">
+			<div class="panel-inner">
+				<h2>About</h2>
 				<h3>What are we?</h3>
 				<p>The <a href="https://github.com/oftn/"><span class="oftn">ΩF:∅</span> Working Group</a> is an open source technology consortium that aims to bring people together to develop useful, high-quality, free, and open-source software and technology for any range of purposes.</p>
 
-				<h3>Our Focus</h3>
-				<p>Our members are familiar with languages as popular as Python, Ruby, JavaScript, and C, as well as Haskell, Erlang, and Lua. Some of our projects are heavily web-oriented, although we don't limit ourselves to that. We try to develop software in a wide range of languages with a wide range of uses.</p>
+				<h3>What&#8217;s our focus?</h3>
+				<p>Many of our members are focused on web technologies, but you find quite a wide range of software. Our members are familiar with languages as popular as JavaScript and C, as well as Haskell, Erlang, and Lua. Our software should exceed the quality of any open or commercial software around. Programming the best is a goal that can never be reached but we are closer each day.</p>
 
-				<h3>Contact Us</h3>
-				<ul>
+				<h3>Contact us</h3>
+				<ol>
 					<li>Visit us in <a href="irc://irc.freenode.net/#oftn">#oftn</a> on the <a href="http://freenode.net/">Freenode IRC network</a></li>
 					<li>Join our <a href="https://plus.google.com/communities/112859235384765702467">Google+ community</a></li>
-				</ul>
+				</ol>
 
-				<h3>Our Name</h3>
-				<p><span class="oftn">ΩF:∅</span> means "ohm-farad to none", and we usually pronounce it as "often".</p>
+				<h3>Our name</h3>
+				<p><span class="oftn">ΩF:∅</span> is pronounced like the word <em>often</em>. However the meaning behind it is secret; if you&#8217;re smart you can figure it out.</p>
 			</div>
-			<h2 id="members" title="Who are we?">Members</h2>
-			<div class="accordian-panel">
+		</div>
+		<div class="panel" id="projects">
+			<div class="panel-inner">
+				<h2>Projects</h2>
+				<h3>Active projects</h3>
+				<p>We are committed to the open-source philosophy. Every bit of our software is available to inspect and modify freely and can be found hosted with the wonderful <a href="https://github.com/oftn/">GitHub</a> service.</p>
+				<dl>
+
+					<dt><a href="https://github.com/oftn/core-estimator">Core Estimator</a></dt>
+					<dd>
+						<p>Core Estimator is a JavaScript library for the browser which is designed to help find the optimum number of web workers to use in parallel by taking advantage of timing. View our <a href="projects/core-estimator/demo/">live demo</a>.</p>
+					</dd>
+
+					<dt><a href="https://github.com/oftn/oftn-bot">oftn-bot</a></dt>
+					<dd>
+						<p>State-of-the-art IRC bot library and bot for Node.js. Try oftn-bot in <a href="ircs://irc.freenode.net/#oftn">#oftn on irc.freenode.net</a>.</p>
+					</dd>
+				</dl>
+
+				<h3>Inactive or abandoned projects</h3>
+				<dl>
+					<dt><a href="https://github.com/oftn/lic">lic</a></dt>
+					<dd>
+						<p>lic (pronounced like lick) is an experimental and new IRC client and framework. It consists of a central hub which maintains persistent connections and attachable clients which serve as an interface to the hub. It is based on Node.js which allows you to access all of the standard API along with lic&#8217;s easy to use API.</p>
+					</dd>
+
+					<dt><a href="https://github.com/oftn/l10n.js">l10n.js</a></dt>
+					<dd>
+						<p>l10n.js is a JavaScript library that enables passive localization through native JavaScript methods, gracefully degrading if the library is not present. You can make Ajax applications, JavaScript libraries, etc. that can be localized but not require l10n.js to function. There is already a placeholder method for all API calls as specified in the ECMAScript specification and is present in all JavaScript engines, so when l10n.js isn&#8217;t present, your application works fine. Visit the <a href="http://purl.eligrey.com/l10n.js/demo">online demo</a> to see l10n.js in action.</p>
+					</dd>
+
+					<dt><a href="https://github.com/oftn/DartMark">DartMark</a></dt>
+					<dd>
+						<p>DartMark is an in-browser WYSIWYG editor with a focus on fast prototyping. The main benefits of it are speed, ease-of-use, and configurability. All actions can be performed with just a keyboard. Your editor is now your previewer, so there is no need to switch back and forth between a seperate editor and a browser to preview. And because it&#8217;s written in-browser, DartMark will let you define your own keyboard shortcuts and special JavaScript function macros. Try out a <a href="projects/dartmark/">working version</a>.</p>
+					</dd>
+
+					<dt><a href="https://github.com/oftn/suit-js">The SUIT Canvas Toolkit</a></dt>
+					<dd>
+						<p>The SUIT Canvas Toolkit is meant to be an easy-to-use, beautiful, and fully-featured UI toolkit for the HTML5 canvas. There are some specialized web applications that require more than just what can be achieved with normal DOM methods. With canvas, you get more flexibility in the design, look-and-feel, and controls. Rendering and page layout also works while hardly having to worry about how things will look and behave in another browser. Besides being useful to you, this was started as an experiment to see how UI toolkits can work in the browser environment. Visit the <a href="projects/suit/">demo page</a>.</p>
+					</dd>
+
+					<dt><a href="https://github.com/oftn/TPFS">TPFS</a></dt>
+					<dd>
+						<p>TPFS (the Tagged Plain File System) is a revolutionary new file system that aims to move beyond the rut of hierarchical file systems through a purely tag based model. There are only two objects in TPFS: files and tags. They share a many-to-many relationship; files can have many different tags, and tags can have many different files. It is designed to be quick to look up in both directions.</p>
+					</dd>
+				</dl>
+			</div>
+		</div>
+		<div class="panel" id="members">
+			<div class="panel-inner">
+				<h2>Members</h2>
 				<h3>Board of Directors</h3>
 				<ul class="members_list">
 					<li class="cloudhead"><a title="cloudhead" href="http://cloudhead.io/">Alexis Sellier</a> (cloudhead)</li>
@@ -82,47 +145,6 @@
 
 				<p>Email <a href="mailto:wg@oftn.org?subject=%CE%A9F%3A%E2%88%85%20Working%20Group%20Membership%20Application">wg@oftn.org</a> to apply for membership.</p>
 			</div>
-			<h2 id="projects" title="What are we making?">Projects</h2>
-			<div class="accordian-panel">
-				<p>We are committed to the open-source philosophy. This is why we manage <a href="https://github.com/oftn/">our open-source projects</a> with the wonderful <a href="https://github.com/">Github</a> service.</p>
-				<dl class="projects">
-
-					<dt><a href="https://github.com/oftn/core-estimator">Core Estimator</a></dt>
-					<dd>
-						<p>Core Estimator is a JavaScript library for the browser which is designed to help find the optimum number of web workers to use in parallel by taking advantage of timing. View our <a href="projects/core-estimator/demo/">live demo</a>.</p>
-					</dd>
-
-					<dt><a href="https://github.com/oftn/oftn-bot">oftn-bot</a></dt>
-					<dd>
-						<p>State-of-the-art IRC bot library and bot for Node.js. Try oftn-bot in <a href="ircs://irc.freenode.net/#oftn">#oftn on irc.freenode.net</a>.</p>
-					</dd>
-
-					<dt><a href="https://github.com/oftn/lic">lic</a></dt>
-					<dd>
-						<p>lic (pronounced like lick) is an experimental and new IRC client and framework. It consists of a central hub which maintains persistent connections and attachable clients which serve as an interface to the hub. It is based on Node.js which allows you to access all of the standard API along with lic's easy to use API.</p>
-					</dd>
-
-					<dt><a href="https://github.com/oftn/l10n.js">l10n.js</a></dt>
-					<dd>
-						<p>l10n.js is a JavaScript library that enables passive localization through native JavaScript methods, gracefully degrading if the library is not present. You can make Ajax applications, JavaScript libraries, etc. that can be localized but not require l10n.js to function. There is already a placeholder method for all API calls as specified in the ECMAScript specification and is present in all JavaScript engines, so when l10n.js isn't present, your application works fine. Visit the <a href="http://purl.eligrey.com/l10n.js/demo">online demo</a> to see l10n.js in action.</p>
-					</dd>
-
-					<dt><a href="https://github.com/oftn/DartMark">DartMark</a></dt>
-					<dd>
-						<p>DartMark is an in-browser WYSIWYG editor with a focus on fast prototyping. The main benefits of it are speed, ease-of-use, and configurability. All actions can be performed with just a keyboard. Your editor is now your previewer, so there is no need to switch back and forth between a seperate editor and a browser to preview. And because it's written in-browser, DartMark will let you define your own keyboard shortcuts and special JavaScript function macros. Try out a <a href="projects/dartmark/">working version</a>.</p>
-					</dd>
-
-					<dt><a href="https://github.com/oftn/suit-js">The SUIT Canvas Toolkit</a></dt>
-					<dd>
-						<p>The SUIT Canvas Toolkit is meant to be an easy-to-use, beautiful, and fully-featured UI toolkit for the HTML5 canvas. There are some specialized web applications that require more than just what can be achieved with normal DOM methods. With canvas, you get more flexibility in the design, look-and-feel, and controls. Rendering and page layout also works while hardly having to worry about how things will look and behave in another browser. Besides being useful to you, this was started as an experiment to see how UI toolkits can work in the browser environment. Visit the <a href="projects/suit/">demo page</a>.</p>
-					</dd>
-
-					<dt><a href="https://github.com/oftn/TPFS">TPFS</a></dt>
-					<dd>
-						<p>TPFS (the Tagged Plain File System) is a revolutionary new file system that aims to move beyond the rut of hierarchical file systems through a purely tag based model. There are only two objects in TPFS: files and tags. They share a many-to-many relationship; files can have many different tags, and tags can have many different files. It is designed to be quick to look up in both directions.</p>
-					</dd>
-				</dl>
-			</div>
 		</div>
 	</div>
 	<footer>
@@ -137,14 +159,6 @@
 	</footer>
 </div>
 
-<script type="application/ecmascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"/>
 <script type="application/ecmascript" src="js/oftn/site.js"/>
-<script type="application/ecmascript" src="js/oftn/accordian.js"/>
-<script type="application/ecmascript">
-<![CDATA[
-new ΩF_0.Accordian (document.getElementById ("overview"));
-]]>
-</script>
-<script type="application/ecmascript" src="https://ssl.google-analytics.com/ga.js"/>
 </body>
 </html>
